# hounddog

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  install.sh  rustfmt.toml
.run/: scan --debug.run.xml  scan --output-format=cacilian.run.xml  scan --output-format=markdown.run.xml  scan.run.xml  test.run.xml
src/: cloud_api.rs  enums.rs  env.rs  error.rs  macros.rs  main.rs  rules.rs  structs.rs
src/output/: cacilian.rs  common.rs  console.rs  gitlab.rs  markdown.rs  mod.rs  sarif.rs
src/output/handlers/: cacilian.rs  console.rs  gitlab.rs  json.rs  markdown.rs  mod.rs  sarif.rs
src/scanner/: common.rs  database.rs  mod.rs
src/scanner/languages/: base.rs  graphql.rs  mod.rs  python.rs  typescript.rs
src/utils/: file.rs  git.rs  hash.rs  mod.rs  serde.rs  table.rs
test/: sampleinput.js  utils.py
