[package]
name = "hounddog"
version = "0.1.0"
description = "AI-powered code scanner for data security and privacy"
homepage = "https://hounddog.ai"
documentation = "https://docs.hounddog.ai"
keywords = ["ai", "sast", "security", "privacy", "scanner"]
edition = "2021"
rust-version = "1.79.0"

[dependencies]
anyhow = "1.0.86"
bytecount = "0.6.8"
chrono = "0.4.38"
clap = { version = "4.5.8", features = ["derive"] }
colored = "2.1.0"
git2 = "0.19.0"
graphql-parser = "0.4.0"
indexmap = "2.2.6"
indicatif = "0.17.8"
ignore = "0.4.22"
md-5 = "0.11.0-pre.3"
tabled = "0.15.0"
regex = "1.10.5"
reqwest = "0.12.5"
rusqlite = "0.31.0"
sentry = "0.34.0"
sentry-anyhow = "0.34.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
sqlparser = "0.47.0"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "1.0.61"
tree-sitter = "0.22.6"
tree-sitter-c-sharp = "0.21.2"
tree-sitter-java = "0.21.0"
tree-sitter-javascript = "0.21.3"
tree-sitter-kotlin = "0.3.6"
tree-sitter-python = "0.21.0"
tree-sitter-ruby = "0.21.0"
tree-sitter-typescript = "0.21.1"
url = "2.5.2"

[build-dependencies]
cc="*"
